--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1894,6 +1894,8 @@ plugins:
   - name: '(Follower Limit Increased|XFL(Dialogue|Main|Plugins))\.es[mp]'
     msg: [ *obsolete ]
 
+###### Gameplay - NPC Behaviour & Dialogue ######
+
 ###### Gameplay - Quests ######
   - name: 'BarenziahQuestMarkers_Droppable.esp'
     url:
