--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1896,7 +1896,9 @@ plugins:
 
 ###### Gameplay - NPC Behaviour & Dialogue ######
   - name: 'CompanionsAriseFinal.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/23129/' ]
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/23129/'
+        name: 'Companions Arise'
     msg:
       - type: say
         content:
