--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1452,6 +1452,9 @@ plugins:
     inc: [ 'kuerteeAutoSaveAndTime.esp' ]
 
   - name: 'DEAsprint&jump.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/19668/'
+        name: 'Sprint and Jump with Boost'
     req: [ *SKSE ]
     msg:
       - type: say
