--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1457,6 +1457,8 @@ plugins:
         name: 'Sprint and Jump with Boost'
     req: [ *SKSE ]
     msg:
+      - <<: *useInstead
+        subs: [ '[vwr Acrobat](https://www.nexusmods.com/skyrim/mods/50564/)' ]
       - type: say
         content:
           - lang: en
