Update Sprint and Jump with Boost (#781)
* Move plugin
  * To 'Gameplay' section.
  * Adds ability to jump while sprinting.

* Add location
  * https://www.nexusmods.com/skyrim/mods/19668/

* Add `useInstead` message
  * Author recommends using a mod whose author recommends using this.
  * https://www.nexusmods.com/skyrim/mods/50564/

* Remove metadata
  * Author considers it deprecated.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1451,6 +1451,14 @@ plugins:
         name: 'Configurable Auto-Saver'
     inc: [ 'kuerteeAutoSaveAndTime.esp' ]
 
+  - name: 'DEAsprint&jump.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/19668/'
+        name: 'Sprint and Jump with Boost'
+    msg:
+      - <<: *useInstead
+        subs: [ '[vwr Acrobat](https://www.nexusmods.com/skyrim/mods/50564/)' ]
+
   - name: 'ERSO \d{2}.+\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/73222/'
@@ -7175,21 +7183,7 @@ plugins:
         crc: 0xCBF09128
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 3
-  - name: 'DEAsprint&jump.esp'
-    req: [ *SKSE ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Won''t work if sprint/jump key is remapped to mouse button.'
-          - lang: de
-            text: 'Funktioniert nicht, wenn die Sprint/Sprungtaste der Maustaste zugeordnet wurde.'
-          - lang: es
-            text: 'No funcionara si utilizas un boton del mouse para brincar o correr.'
-          - lang: ja
-            text: 'スプリント/ジャンプ用のキーがマウスボタンに割り当てられていると動作しません。'
-          - lang: ru
-            text: 'Может не работать, если кнопка бега\прыжка переназначена на кнопку мыши.'
+
   - name: 'Dragon Soul Relinquishment.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/27531/' ]
     dirty:
