--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1794,6 +1794,9 @@ plugins:
 
 ###### Gameplay - Economy & Item Balance ######
   - name: 'DynamicPotions.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/47521/'
+        name: 'Dynamic Potions - Poisons - Ingredients - Food'
     msg:
       - type: say
         content:
