Add `requiresMCM_SkyUI` message
  * Requires MCM to be functional.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1801,6 +1801,7 @@ plugins:
       - <<: *alsoUseX
         subs: [ '[FileAccess Interface for Skyrim Script](https://www.nexusmods.com/skyrim/mods/48265/)' ]
         condition: 'not active("FISS.esp")'
+      - *requiresMCM_SkyUI
       - <<: *versionXofYorGreaterRequired
         subs:
           - '1.7.0'
