--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -838,6 +838,9 @@ plugins:
 
 ###### AudioVisual ######
   - name: 'DYNAVISION Dynamic Depth of Field.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/12525/'
+        name: 'DYNAVISION - Dynamic Depth of Field'
     msg:
       - type: say
         content:
