Refactor unaliased message
  * With `requiresX`.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -842,18 +842,9 @@ plugins:
       - link: 'https://www.nexusmods.com/skyrim/mods/12525/'
         name: 'DYNAVISION - Dynamic Depth of Field'
     msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Make sure you have not switched DoF off in your ini file. If you don''t see any effect, open you Skyrimprefs.ini and look for "bDoDepthOfField". Make sure it is set to 1.'
-          - lang: de
-            text: 'Stellen Sie sicher, dass Sie DoF in Ihrer INI-Datei nicht ausgeschaltet haben. Wenn Sie keinen Effekt sehen, öffnen Sie die Datei Skyrimprefs.ini und suchen Sie nach "bDoDepthOfField". Stellen Sie sicher, dass es auf 1 gesetzt ist.'
-          - lang: es
-            text: 'Asegurate de no haber apagado el DoF en tu ini. Si no ves el efecto abre Skyrimprefs.ini y asegurate de que ''bDoDepthOfField'' sea igual a 1.'
-          - lang: ja
-            text: 'iniファイルのDoFはオフにしないでください。エフェクトが表示されない場合はSkyrimprefs.iniを開き、[bDoDepthOfField] を1にセットしましょう。'
-          - lang: ru
-            text: 'Убедитесь, что вы не выключили DoF в вашем ini-файле. Если вы не видите эффекта, откройте ваш Skyrimprefs.ini и найдите строку ''bDoDepthOfField''. Убедитесь, что она имеет значение 1.'
+      - <<: *requiresX
+        type: say
+        subs: [ 'SkyrimPrefs.ini -> bDoDepthOfField=1' ]
 
   - name: 'nomorestupiddog.esp'
     url:
