--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1939,6 +1939,9 @@ plugins:
         udr: 16
 
   - name: 'FollowerWander2.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/9504/'
+        name: 'Followers can Relax'
     msg:
       - type: say
         content:
