--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1376,6 +1376,7 @@ plugins:
       - crc: 0xA133C0B8
         util: 'TES5Edit v4.0.4c'
 
+  - name: 'High Level Enemies( - (Dawnguard|Dragonborn|Falskaar))?\.esp'
   - name: 'High Level Enemies.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/27866/' ]
     tag: [ Relev ]
