--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1377,8 +1377,10 @@ plugins:
         util: 'TES5Edit v4.0.4c'
 
   - name: 'High Level Enemies( - (Dawnguard|Dragonborn|Falskaar))?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/27866/'
+        name: 'High Level Enemies'
   - name: 'High Level Enemies.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27866/' ]
     tag: [ Relev ]
     clean:
       # Main
@@ -1391,7 +1393,6 @@ plugins:
       - crc: 0x297D77BE
         util: 'TES5Edit v4.0.2f'
   - name: 'High Level Enemies - Dawnguard.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27866/' ]
     msg:
       - type: warn
         content:
@@ -1419,7 +1420,6 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 1
   - name: 'High Level Enemies - Dragonborn.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/27866/' ]
     tag: [ Relev ]
     clean:
       # DB
