--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1931,6 +1931,8 @@ plugins:
   - name: 'Realistic Wildlife Loot (V1\.3.*|- IMCN)\.esp'
     msg: [ *obsolete ]
 
+###### Gameplay - Magic & Abilities ######
+
 ###### Gameplay - Mount & Follower Managers ######
   - name: 'AmazingFollowerTweaks.esp'
     url:
