--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1932,7 +1932,7 @@ plugins:
     msg: [ *obsolete ]
 
 ###### Gameplay - Magic & Abilities ######
-  - name: 'iMaxPlayerRunes\d+\.esp'
+  - name: 'iMaxPlayerRunes0\d{2}\.esp'
     msg:
       - type: say
         content:
