--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1933,6 +1933,9 @@ plugins:
 
 ###### Gameplay - Magic & Abilities ######
   - name: 'iMaxPlayerRunes0\d{2}\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/3822/'
+        name: 'Maximum Player Runes minimod'
     msg:
       - type: say
         content:
