--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2125,6 +2125,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Isharas_Glimpse_of_Elsweyr.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/25362/'
+        name: 'Glimpse of Elsweyr'
     msg:
       - type: say
         content:
