Add Invent.Add tag
  * Adds items to inventory of 0009B0AD.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2128,6 +2128,7 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/25362/'
         name: 'Glimpse of Elsweyr'
+    tag: [ Invent.Add ]
 
   - name: 'Organized Books v2.0.esp'
     url:
