Update Glimpse of Elsweyr (#787)
* Move plugin
  * To 'Items' section.
  * Adds satchel that can store items.

* Add location
  * https://www.nexusmods.com/skyrim/mods/25362/

* Remove unaliased message
  * Doesn't really warrant message, & installing SKSE isn't enough to
    enable functionality.

* Add Invent.Add tag
  * Adds items to inventory of 0009B0AD.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2124,6 +2124,12 @@ plugins:
       - crc: 0x8F56DE23
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Isharas_Glimpse_of_Elsweyr.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/25362/'
+        name: 'Glimpse of Elsweyr'
+    tag: [ Invent.Add ]
+
   - name: 'Organized Books v2.0.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/26913/'
@@ -20022,17 +20028,7 @@ plugins:
     clean:
       - crc: 0x0B59F4D6
         util: 'TES5Edit v4.0.4b'
-  - name: 'Isharas_Glimpse_of_Elsweyr.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Note that to allow containers to have categories like the player inventory you need [SKSE](https://skse.silverlock.org/). See the "Tip" section on the mods [description page](https://www.nexusmods.com/skyrim/mods/25362).'
-          - lang: de
-            text: 'Beachten Sie, dass Sie [SKSE](https://skse.silverlock.org/) benötigen, um Containern Kategorien wie das Player-Inventar zu ermöglichen. Siehe den Abschnitt "Tip" der Mods [Beschreibung](https://www.nexusmods.com/skyrim/mods/25362).'
-          - lang: ja
-            text: '注: 入れ物にプレイヤーのインベントリと同じようなカテゴリを追加するには[SKSE](https://skse.silverlock.org/)が必要です。詳しくはModの[概要ページ](https://www.nexusmods.com/skyrim/mods/25362)にある「tip」の項目を確認してください。'
-        condition: 'not file("../skse_loader.exe")'
+
   - name: 'KodlakWhitemane.esp'
     msg:
       - <<: *corrupt
