--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1941,6 +1941,9 @@ plugins:
         subs: [ 'Tweak Settings -> Magic: Max Active Runes' ]
 
   - name: 'InfernoStormShout.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8343/'
+        name: 'New Shout - Inferno Storm'
     msg:
       - type: say
         content:
