Add cleaning data
  * v0.8.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1944,6 +1944,9 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/8343/'
         name: 'New Shout - Inferno Storm'
+    clean:
+      - crc: 0x2397C842
+        util: 'TES5Edit v4.0.4c'
 
 ###### Gameplay - Mount & Follower Managers ######
   - name: 'AmazingFollowerTweaks.esp'
