--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1940,6 +1940,14 @@ plugins:
       - <<: *useBashTweakInstead
         subs: [ 'Tweak Settings -> Magic: Max Active Runes' ]
 
+  - name: 'InfernoStormShout.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8343/'
+        name: 'New Shout - Inferno Storm'
+    clean:
+      - crc: 0x2397C842
+        util: 'TES5Edit v4.0.4c'
+
 ###### Gameplay - Mount & Follower Managers ######
   - name: 'AmazingFollowerTweaks.esp'
     url:
@@ -20431,18 +20439,7 @@ plugins:
     inc: [ 'DragonbornAscendantDawnguardExpansion.esp' ]
   - name: 'Improved Dragon Shouts - Dragonborn.esp'
     inc: [ 'DragonbornAscendantDragonbornDLCAddon.esp' ]
-  - name: 'InfernoStormShout.esp'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'See [mod page](https://www.nexusmods.com/skyrim/mods/8343) for uninstallation instructions.'
-          - lang: de
-            text: 'Anweisungen zur Deinstallation finden Sie auf der [Mod Seite](https://www.nexusmods.com/skyrim/mods/8343).'
-          - lang: ja
-            text: '[公開ページ](https://www.nexusmods.com/skyrim/mods/8343)のアンインストール手順に目を通しておいてください。'
-          - lang: ru
-            text: 'Смотрите инструкции по удалению на [странице мода](https://www.nexusmods.com/skyrim/mods/8343).'
+
   - name: 'Shout-tastic.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/23137/'
