--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2138,6 +2138,7 @@ plugins:
         name: 'Glimpse of Elsweyr'
     tag: [ Invent.Add ]
 
+  - name: 'JSwords(DistributionBalancePlugin)?\.es[mp]'
   - name: 'JSwords.esm'
     url: [ 'https://www.nexusmods.com/skyrim/mods/1002/' ]
     msg:
