--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2139,8 +2139,10 @@ plugins:
     tag: [ Invent.Add ]
 
   - name: 'JSwords(DistributionBalancePlugin)?\.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1002/'
+        name: 'JaySuS Swords'
   - name: 'JSwords.esm'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1002/' ]
     msg:
       - *alreadyInCompleteCraftingOverhaulRemade
       - <<: *obsoleteSharlikran
