--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2142,6 +2142,8 @@ plugins:
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/1002/'
         name: 'JaySuS Swords'
+      - link: 'https://www.nexusmods.com/skyrim/mods/26230/'
+        name: 'Sharlikran''s Compatibility Patches'
   - name: 'JSwords.esm'
     msg:
       - *alreadyInCompleteCraftingOverhaulRemade
