Refactor `alreadyInCompleteCraftingOverhaulRemade` message
  * With regex plugin.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2144,9 +2144,9 @@ plugins:
         name: 'JaySuS Swords'
       - link: 'https://www.nexusmods.com/skyrim/mods/26230/'
         name: 'Sharlikran''s Compatibility Patches'
+    msg: [ *alreadyInCompleteCraftingOverhaulRemade ]
   - name: 'JSwords.esm'
     msg:
-      - *alreadyInCompleteCraftingOverhaulRemade
       - <<: *obsoleteSharlikran
         condition: 'version("JSwords.esm", "14.0", <)'
     clean:
@@ -2163,7 +2163,6 @@ plugins:
           - lang: ja
             text: '[こちら](https://www.nexusmods.com/skyrim/mods/26230)からTES5Editで修正しクリーニングを行った14.0の互換パッチを入手できます。'
         condition: 'version("JSwordsDistributionBalancePlugin.esp","14.0",<)'
-      - <<: *alreadyInCompleteCraftingOverhaulRemade
     tag:
       - Delev
       - Relev
