Update JaySuS Swords (#789)
* Move plugins
  * To 'Items' section.
  * Adds weapons.

* Add plugin
  * Group with plugins from same page.

* Update location
  * Move to regex plugin.
  * Add name.

* Add location
  * Sharlikran's updated version
    * https://www.nexusmods.com/skyrim/mods/26230/

* Refactor `alreadyInCompleteCraftingOverhaulRemade` message
  * With regex plugin.

* Refactor unaliased message
  * With `obsoleteSharlikran`.
  * Add spaces after commas in condition.

* Remove plugin
  * Old version, no longer available.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2138,6 +2138,28 @@ plugins:
         name: 'Glimpse of Elsweyr'
     tag: [ Invent.Add ]
 
+  - name: 'JSwords(DistributionBalancePlugin)?\.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1002/'
+        name: 'JaySuS Swords'
+      - link: 'https://www.nexusmods.com/skyrim/mods/26230/'
+        name: 'Sharlikran''s Compatibility Patches'
+    msg: [ *alreadyInCompleteCraftingOverhaulRemade ]
+  - name: 'JSwords.esm'
+    msg:
+      - <<: *obsoleteSharlikran
+        condition: 'version("JSwords.esm", "14.0", <)'
+    clean:
+      - crc: 0x142A34B6
+        util: 'TES5Edit v4.0.3f'
+  - name: 'JSwordsDistributionBalancePlugin.esp'
+    msg:
+      - <<: *obsoleteSharlikran
+        condition: 'version("JSwordsDistributionBalancePlugin.esp", "14.0", <)'
+    tag:
+      - Delev
+      - Relev
+
   - name: 'Organized Books v2.0.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/26913/'
@@ -3010,16 +3032,6 @@ plugins:
         itm: 6
   - name: 'IsharasUniqueRaces.esm'
     inc: [ 'ethereal_elven_overhaul.esp' ]
-
-  - name: 'JSwords.esm'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1002/' ]
-    msg:
-      - *alreadyInCompleteCraftingOverhaulRemade
-      - <<: *obsoleteSharlikran
-        condition: 'version("JSwords.esm", "14.0", <)'
-    clean:
-      - crc: 0x142A34B6
-        util: 'TES5Edit v4.0.3f'
 
   - name: 'kuerteeInventoryAndWeight.esm'
     msg: [ *obsolete ]
@@ -8763,23 +8775,7 @@ plugins:
         crc: 0x4CE34157
         util: '[TES5Edit v4.0.2j](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 13
-  - name: 'JSwords.esp'
-    msg: [ *obsolete ]
-  - name: 'JSwordsDistributionBalancePlugin.esp'
-    msg:
-      - type: warn
-        content:
-          - lang: en
-            text: 'Version 14.0 compatibility patch fixed and cleaned with TES5Edit can be obtained [here](https://www.nexusmods.com/skyrim/mods/26230).'
-          - lang: de
-            text: 'Der Kompatibilitätspatch Version 14.0, ausgebessert und gesäubert mit TES5Edit, kann [hier](https://www.nexusmods.com/skyrim/mods/26230) heruntergeladen werden.'
-          - lang: ja
-            text: '[こちら](https://www.nexusmods.com/skyrim/mods/26230)からTES5Editで修正しクリーニングを行った14.0の互換パッチを入手できます。'
-        condition: 'version("JSwordsDistributionBalancePlugin.esp","14.0",<)'
-      - <<: *alreadyInCompleteCraftingOverhaulRemade
-    tag:
-      - Delev
-      - Relev
+
   - name: 'Deleveled Skyrim - JSwords.esp'
     tag:
       - Delev
