--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1292,6 +1292,7 @@ plugins:
       - crc: 0x73F0DE76
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'MTOH\.es[mp]'
   - name: 'MTOH.esm'
     msg:
       - type: say
