--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1293,6 +1293,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'MTOH\.es[mp]'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/6173/'
+        name: 'My Type of Hair'
   - name: 'MTOH.esm'
     msg:
       - type: say
