Replace unaliased message
  * With `obsolete`.
  * ESP is also standalone, ESM is just old version.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1297,19 +1297,7 @@ plugins:
       - link: 'https://www.nexusmods.com/skyrim/mods/6173/'
         name: 'My Type of Hair'
   - name: 'MTOH.esm'
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Hair standalone mod for other mods which edit NPCs. If this one is used, MTOH.esp should be disabled.'
-          - lang: de
-            text: 'Eigenständige Haar Mod für andere Mods, die NPCs bearbeiten. Wenn diese verwendet wird, sollte MTOH.esp deaktiviert werden.'
-          - lang: es
-            text: 'Si utilizas este mod, MTOH.esp debe ser desactivado.'
-          - lang: ja
-            text: 'NPCに編集を加える他のMod用のスタンドアローン髪型Modです。こちらを使用する場合はMTOH.espを非アクティブにしてください。'
-          - lang: ru
-            text: 'Автономный мод причесок, меняющий NPC. Если он использован, то MTOH.esp должен быть отключен.'
+    msg: [ *obsolete ]
 
 ###### Encounters - Allies ######
   - name: 'CompanionArissa.esm'
