--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1232,6 +1232,7 @@ plugins:
       - crc: 0xB7A24777
         util: 'TES5Edit v4.0.2i'
 
+  - name: 'People Have (Lantern|Torche)s\.esp'
   - name: 'People Have Lanterns.esp'
     msg:
       - type: say
