--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1233,6 +1233,9 @@ plugins:
         util: 'TES5Edit v4.0.2i'
 
   - name: 'People Have (Lantern|Torche)s\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/14019/'
+        name: 'Light up the night - People Have Torches'
   - name: 'People Have Lanterns.esp'
     msg:
       - type: say
