--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2062,6 +2062,8 @@ plugins:
   - name: 'LB_MuchAdoSnowElves_WeaponsOnly.esp'
     inc: [ 'LB_MuchAdoSnowElves_Quest.esp' ]
 
+###### Gameplay - Skills & Perks ######
+
 ###### Gameplay - User Interface ######
   - name: 'AHZmoreHUD.esp'
     url:
