--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2063,6 +2063,7 @@ plugins:
     inc: [ 'LB_MuchAdoSnowElves_Quest.esp' ]
 
 ###### Gameplay - Skills & Perks ######
+  - name: 'Perks Unbound( - Helmless Warrior)?( - (Dawnguard|Dragonborn|Merged))?\.esp'
   - name: 'Perks Unbound.esp'
     msg:
       - type: say
