--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2064,6 +2064,9 @@ plugins:
 
 ###### Gameplay - Skills & Perks ######
   - name: 'Perks Unbound( - Helmless Warrior)?( - (Dawnguard|Dragonborn|Merged))?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/19538/'
+        name: 'Perks Unbound - Legendary Edition'
   - name: 'Perks Unbound.esp'
     msg:
       - type: say
