--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2069,15 +2069,10 @@ plugins:
         name: 'Perks Unbound - Legendary Edition'
   - name: 'Perks Unbound.esp'
     msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Update (PU,PU-DG,PU-DB) to Perks Unbound - Merged.esp'
-          - lang: de
-            text: 'Aktualisiere (PU,PU-DG,PU-DB) auf Perks Unbound - Merged.esp'
-          - lang: ja
-            text: 'Perks Unbound.esp（- Dawnguard & Dragonborn）をPerks Unbound - Merged.espに更新してください。'
-        condition: 'file("Perks Unbound - Dragonborn.esp") and file("Perks Unbound - Dawnguard.esp")'
+      - <<: *useVersion
+        type: warn
+        subs: [ 'Merged' ]
+        condition: 'active("Unofficial Skyrim Legendary Edition Patch.esp")'
   - name: 'Perks Unbound - Helmless Warrior.esp'
     inc: [ 'Perks Unbound.esp' ]
 
