--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -986,6 +986,7 @@ plugins:
       - crc: 0xE87C93C0
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Radiant and Unique Potions( and)? Poisons( v2\.0| and BOOZE)?\.esp'
   - name: 'Radiant and Unique Potions Poisons and BOOZE.esp'
     tag: [ Graphics ]
     msg:
