--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -987,6 +987,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Radiant and Unique Potions( and)? Poisons( v2\.0| and BOOZE)?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/18799/'
+        name: 'Radiant and Unique Potions and Poisons HD'
   - name: 'Radiant and Unique Potions Poisons and BOOZE.esp'
     tag: [ Graphics ]
     msg:
