--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1757,6 +1757,9 @@ plugins:
     tag: [ Relev ]
 
   - name: 'SkyRealism - Capacity and Carry Weight.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/21224/'
+        name: 'SkyRealism - Capacity'
     req: [ *SKSE ]
     msg:
       - type: warn
